Working on Markdown

--- a/philip_module7.ipynb
+++ b/philip_module7.ipynb
@@ -26,6 +26,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This code comes from Dietel & Dietel (2019) with annotations and errors by Philip Fowler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Part 1 - Chart a Straight Line"
    ]
   },
@@ -1420,6 +1427,11 @@
    "source": [
     "# Part 4 - Insights"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
